deployments/location.yml
apiVersion: v1
kind: Service
metadata:
  name: locationservice-svc
  labels:
    run: locationservice-svc
spec:
  type: NodePort
  ports:
  - port: 5002
    nodePort: 30002
    protocol: TCP
  selector:
    run: locationservice
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locationservice
spec:
  selector:
    matchLabels:
      run: locationservice
  replicas: 2
  template:
    metadata:
      labels:
        run: locationservice
    spec:
      containers:
      - name: locationservice
        image: fipost/location-service:0.0.1.5-beta
        ports:
        - containerPort: 5002
