deployments/ui.yml
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
  labels:
    run: ui-svc
spec:
  type: NodePort
  ports:
  - port: 80
    #nodePort: 30080
    protocol: TCP
  selector:
    run: ui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui
spec:
  selector:
    matchLabels:
      run: ui
  replicas: 2
  template:
    metadata:
      labels:
        run: ui
    spec:
      containers:
      - name: pakketservice
        image: fipost/ui:0.0.5.1
        ports:
        - containerPort: 80
